src/backend/ast/Lean4ExprParser.ts
// Generated from Lean4Expr.g4 by ANTLR 4.13.2
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import Lean4ExprVisitor from "./Lean4ExprVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class Lean4ExprParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly T__23 = 24;
	public static readonly T__24 = 25;
	public static readonly T__25 = 26;
	public static readonly T__26 = 27;
	public static readonly T__27 = 28;
	public static readonly T__28 = 29;
	public static readonly LITERAL = 30;
	public static readonly INTEGER = 31;
	public static readonly FLOAT = 32;
	public static readonly ID = 33;
	public static readonly FORALL = 34;
	public static readonly EXISTS = 35;
	public static readonly LAMBDA = 36;
	public static readonly WS = 37;
	public static readonly NEWLINE = 38;
	public static override readonly EOF = Token.EOF;
	public static readonly RULE_start = 0;
	public static readonly RULE_goal = 1;
	public static readonly RULE_tag = 2;
	public static readonly RULE_vars = 3;
	public static readonly RULE_var = 4;
	public static readonly RULE_expr = 5;
	public static readonly RULE_target = 6;
	public static readonly RULE_forallExpr = 7;
	public static readonly RULE_funcExpr = 8;
	public static readonly RULE_existsExpr = 9;
	public static readonly RULE_opType = 10;
	public static readonly RULE_atomType = 11;
	public static readonly RULE_binders = 12;
	public static readonly RULE_binder = 13;
	public static readonly RULE_explicitBinder = 14;
	public static readonly RULE_implicitBinder = 15;
	public static readonly RULE_instanceBinder = 16;
	public static readonly RULE_identifiers = 17;
	public static readonly literalNames: (string | null)[] = [ null, "':'", 
                                                            "'\\u251C'", 
                                                            "','", "'.'", 
                                                            "'\\u2218'", 
                                                            "'^'", "'-'", 
                                                            "'*'", "'/'", 
                                                            "'+'", "'='", 
                                                            "'\\u2260'", 
                                                            "'>'", "'<'", 
                                                            "'\\u2265'", 
                                                            "'\\u2264'", 
                                                            "'\\u00AC'", 
                                                            "'\\u2227'", 
                                                            "'\\u00D7'", 
                                                            "'\\u2228'", 
                                                            "'\\u2192'", 
                                                            "'->'", "'\\u2194'", 
                                                            "'('", "')'", 
                                                            "'{'", "'}'", 
                                                            "'['", "']'", 
                                                            null, null, 
                                                            null, null, 
                                                            "'\\u2200'", 
                                                            "'\\u2203'", 
                                                            "'\\u03BB'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             "LITERAL", 
                                                             "INTEGER", 
                                                             "FLOAT", "ID", 
                                                             "FORALL", "EXISTS", 
                                                             "LAMBDA", "WS", 
                                                             "NEWLINE" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"start", "goal", "tag", "vars", "var", "expr", "target", "forallExpr", 
		"funcExpr", "existsExpr", "opType", "atomType", "binders", "binder", "explicitBinder", 
		"implicitBinder", "instanceBinder", "identifiers",
	];
	public get grammarFileName(): string { return "Lean4Expr.g4"; }
	public get literalNames(): (string | null)[] { return Lean4ExprParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return Lean4ExprParser.symbolicNames; }
	public get ruleNames(): string[] { return Lean4ExprParser.ruleNames; }
	public get serializedATN(): number[] { return Lean4ExprParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, Lean4ExprParser._ATN, Lean4ExprParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public start(): StartContext {
		let localctx: StartContext = new StartContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, Lean4ExprParser.RULE_start);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 37;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 36;
				this.goal();
				}
				}
				this.state = 39;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la===2 || _la===30 || _la===33 || _la===38);
			this.state = 41;
			this.match(Lean4ExprParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public goal(): GoalContext {
		let localctx: GoalContext = new GoalContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, Lean4ExprParser.RULE_goal);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 46;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===38) {
				{
				{
				this.state = 43;
				this.match(Lean4ExprParser.NEWLINE);
				}
				}
				this.state = 48;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 50;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 2, this._ctx) ) {
			case 1:
				{
				this.state = 49;
				this.tag();
				}
				break;
			}
			this.state = 52;
			this.vars();
			this.state = 53;
			this.target();
			this.state = 57;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 3, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 54;
					this.match(Lean4ExprParser.NEWLINE);
					}
					}
				}
				this.state = 59;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 3, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public tag(): TagContext {
		let localctx: TagContext = new TagContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, Lean4ExprParser.RULE_tag);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 61;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 60;
				_la = this._input.LA(1);
				if(!(_la===30 || _la===33)) {
				this._errHandler.recoverInline(this);
				}
				else {
					this._errHandler.reportMatch(this);
				    this.consume();
				}
				}
				}
				this.state = 63;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la===30 || _la===33);
			this.state = 65;
			this.match(Lean4ExprParser.T__0);
			this.state = 66;
			this.match(Lean4ExprParser.NEWLINE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public vars(): VarsContext {
		let localctx: VarsContext = new VarsContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, Lean4ExprParser.RULE_vars);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 73;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===33) {
				{
				{
				this.state = 68;
				this.var_();
				this.state = 69;
				this.match(Lean4ExprParser.NEWLINE);
				}
				}
				this.state = 75;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public var_(): VarContext {
		let localctx: VarContext = new VarContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, Lean4ExprParser.RULE_var);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 76;
			this.identifiers();
			this.state = 77;
			this.match(Lean4ExprParser.T__0);
			this.state = 78;
			this.expr();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public expr(): ExprContext {
		let localctx: ExprContext = new ExprContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, Lean4ExprParser.RULE_expr);
		try {
			this.state = 82;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 6, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 80;
				this.funcExpr();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 81;
				this.opType(0);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public target(): TargetContext {
		let localctx: TargetContext = new TargetContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, Lean4ExprParser.RULE_target);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 84;
			this.match(Lean4ExprParser.T__1);
			this.state = 85;
			this.expr();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public forallExpr(): ForallExprContext {
		let localctx: ForallExprContext = new ForallExprContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, Lean4ExprParser.RULE_forallExpr);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 87;
			this.match(Lean4ExprParser.FORALL);
			this.state = 88;
			this.binders();
			this.state = 89;
			_la = this._input.LA(1);
			if(!(_la===3 || _la===4)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			this.state = 90;
			this.expr();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public funcExpr(): FuncExprContext {
		let localctx: FuncExprContext = new FuncExprContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, Lean4ExprParser.RULE_funcExpr);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 92;
			this.binders();
			this.state = 93;
			this.match(Lean4ExprParser.T__0);
			this.state = 94;
			this.expr();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public existsExpr(): ExistsExprContext {
		let localctx: ExistsExprContext = new ExistsExprContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, Lean4ExprParser.RULE_existsExpr);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 96;
			this.match(Lean4ExprParser.EXISTS);
			this.state = 97;
			this.binders();
			this.state = 98;
			_la = this._input.LA(1);
			if(!(_la===3 || _la===4)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			this.state = 99;
			this.expr();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}

	public opType(): OpTypeContext;
	public opType(_p: number): OpTypeContext;
	// @RuleVersion(0)
	public opType(_p?: number): OpTypeContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let localctx: OpTypeContext = new OpTypeContext(this, this._ctx, _parentState);
		let _prevctx: OpTypeContext = localctx;
		let _startState: number = 20;
		this.enterRecursionRule(localctx, 20, Lean4ExprParser.RULE_opType, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 119;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 24:
			case 30:
			case 33:
				{
				this.state = 102;
				this.atomType();
				}
				break;
			case 26:
				{
				this.state = 103;
				this.implicitBinder();
				}
				break;
			case 28:
				{
				this.state = 104;
				this.instanceBinder();
				}
				break;
			case 7:
				{
				this.state = 105;
				localctx._op = this.match(Lean4ExprParser.T__6);
				this.state = 106;
				this.opType(11);
				 localctx.precedence =  75; 
				}
				break;
			case 17:
				{
				this.state = 109;
				localctx._op = this.match(Lean4ExprParser.T__16);
				this.state = 110;
				this.opType(7);
				 localctx.precedence =  40; 
				}
				break;
			case 34:
				{
				this.state = 113;
				this.forallExpr();
				 localctx.precedence =  0; 
				}
				break;
			case 35:
				{
				this.state = 116;
				this.existsExpr();
				 localctx.precedence =  0; 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this._ctx.stop = this._input.LT(-1);
			this.state = 172;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 9, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = localctx;
					{
					this.state = 170;
					this._errHandler.sync(this);
					switch ( this._interp.adaptivePredict(this._input, 8, this._ctx) ) {
					case 1:
						{
						localctx = new OpTypeContext(this, _parentctx, _parentState);
						this.pushNewRecursionContext(localctx, _startState, Lean4ExprParser.RULE_opType);
						this.state = 121;
						if (!(this.precpred(this._ctx, 14))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 14)");
						}
						this.state = 122;
						this.opType(15);
						 localctx.precedence =  100; localctx.assoc =  "left"; 
						}
						break;
					case 2:
						{
						localctx = new OpTypeContext(this, _parentctx, _parentState);
						this.pushNewRecursionContext(localctx, _startState, Lean4ExprParser.RULE_opType);
						this.state = 125;
						if (!(this.precpred(this._ctx, 13))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 13)");
						}
						this.state = 126;
						localctx._op = this.match(Lean4ExprParser.T__4);
						this.state = 127;
						this.opType(13);
						 localctx.precedence =  90; localctx.assoc =  "right"; 
						}
						break;
					case 3:
						{
						localctx = new OpTypeContext(this, _parentctx, _parentState);
						this.pushNewRecursionContext(localctx, _startState, Lean4ExprParser.RULE_opType);
						this.state = 130;
						if (!(this.precpred(this._ctx, 12))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 12)");
						}
						this.state = 131;
						localctx._op = this.match(Lean4ExprParser.T__5);
						this.state = 132;
						this.opType(12);
						 localctx.precedence =  80; localctx.assoc =  "right"; 
						}
						break;
					case 4:
						{
						localctx = new OpTypeContext(this, _parentctx, _parentState);
						this.pushNewRecursionContext(localctx, _startState, Lean4ExprParser.RULE_opType);
						this.state = 135;
						if (!(this.precpred(this._ctx, 10))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 10)");
						}
						this.state = 136;
						localctx._op = this._input.LT(1);
						_la = this._input.LA(1);
						if(!(_la===8 || _la===9)) {
						    localctx._op = this._errHandler.recoverInline(this);
						}
						else {
							this._errHandler.reportMatch(this);
						    this.consume();
						}
						this.state = 137;
						this.opType(11);
						 localctx.precedence =  70; localctx.assoc =  "left"; 
						}
						break;
					case 5:
						{
						localctx = new OpTypeContext(this, _parentctx, _parentState);
						this.pushNewRecursionContext(localctx, _startState, Lean4ExprParser.RULE_opType);
						this.state = 140;
						if (!(this.precpred(this._ctx, 9))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 9)");
						}
						this.state = 141;
						localctx._op = this._input.LT(1);
						_la = this._input.LA(1);
						if(!(_la===7 || _la===10)) {
						    localctx._op = this._errHandler.recoverInline(this);
						}
						else {
							this._errHandler.reportMatch(this);
						    this.consume();
						}
						this.state = 142;
						this.opType(10);
						 localctx.precedence =  65; localctx.assoc =  "left"; 
						}
						break;
					case 6:
						{
						localctx = new OpTypeContext(this, _parentctx, _parentState);
						this.pushNewRecursionContext(localctx, _startState, Lean4ExprParser.RULE_opType);
						this.state = 145;
						if (!(this.precpred(this._ctx, 8))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 8)");
						}
						this.state = 146;
						localctx._op = this._input.LT(1);
						_la = this._input.LA(1);
						if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 129024) !== 0))) {
						    localctx._op = this._errHandler.recoverInline(this);
						}
						else {
							this._errHandler.reportMatch(this);
						    this.consume();
						}
						this.state = 147;
						this.opType(9);
						 localctx.precedence =  50; localctx.assoc =  "none"; 
						}
						break;
					case 7:
						{
						localctx = new OpTypeContext(this, _parentctx, _parentState);
						this.pushNewRecursionContext(localctx, _startState, Lean4ExprParser.RULE_opType);
						this.state = 150;
						if (!(this.precpred(this._ctx, 6))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 6)");
						}
						this.state = 151;
						localctx._op = this._input.LT(1);
						_la = this._input.LA(1);
						if(!(_la===18 || _la===19)) {
						    localctx._op = this._errHandler.recoverInline(this);
						}
						else {
							this._errHandler.reportMatch(this);
						    this.consume();
						}
						this.state = 152;
						this.opType(7);
						 localctx.precedence =  35; localctx.assoc =  "left"; 
						}
						break;
					case 8:
						{
						localctx = new OpTypeContext(this, _parentctx, _parentState);
						this.pushNewRecursionContext(localctx, _startState, Lean4ExprParser.RULE_opType);
						this.state = 155;
						if (!(this.precpred(this._ctx, 5))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 5)");
						}
						this.state = 156;
						localctx._op = this.match(Lean4ExprParser.T__19);
						this.state = 157;
						this.opType(6);
						 localctx.precedence =  30; localctx.assoc =  "left"; 
						}
						break;
					case 9:
						{
						localctx = new OpTypeContext(this, _parentctx, _parentState);
						this.pushNewRecursionContext(localctx, _startState, Lean4ExprParser.RULE_opType);
						this.state = 160;
						if (!(this.precpred(this._ctx, 4))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 4)");
						}
						this.state = 161;
						localctx._op = this._input.LT(1);
						_la = this._input.LA(1);
						if(!(_la===21 || _la===22)) {
						    localctx._op = this._errHandler.recoverInline(this);
						}
						else {
							this._errHandler.reportMatch(this);
						    this.consume();
						}
						this.state = 162;
						this.opType(4);
						 localctx.precedence =  25; localctx.assoc =  "right"; 
						}
						break;
					case 10:
						{
						localctx = new OpTypeContext(this, _parentctx, _parentState);
						this.pushNewRecursionContext(localctx, _startState, Lean4ExprParser.RULE_opType);
						this.state = 165;
						if (!(this.precpred(this._ctx, 3))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 3)");
						}
						this.state = 166;
						localctx._op = this.match(Lean4ExprParser.T__22);
						this.state = 167;
						this.opType(4);
						 localctx.precedence =  20; localctx.assoc =  "none"; 
						}
						break;
					}
					}
				}
				this.state = 174;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 9, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return localctx;
	}
	// @RuleVersion(0)
	public atomType(): AtomTypeContext {
		let localctx: AtomTypeContext = new AtomTypeContext(this, this._ctx, this.state);
		this.enterRule(localctx, 22, Lean4ExprParser.RULE_atomType);
		let _la: number;
		try {
			this.state = 191;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 11, this._ctx) ) {
			case 1:
				localctx = new IdentifierContext(this, localctx);
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 175;
				this.match(Lean4ExprParser.ID);
				}
				break;
			case 2:
				localctx = new LiteralContext(this, localctx);
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 176;
				this.match(Lean4ExprParser.LITERAL);
				}
				break;
			case 3:
				localctx = new ParenExprContext(this, localctx);
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 177;
				this.match(Lean4ExprParser.T__23);
				this.state = 178;
				this.expr();
				this.state = 179;
				this.match(Lean4ExprParser.T__24);
				}
				break;
			case 4:
				localctx = new TupleContext(this, localctx);
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 181;
				this.match(Lean4ExprParser.T__23);
				this.state = 182;
				this.expr();
				this.state = 185;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				do {
					{
					{
					this.state = 183;
					this.match(Lean4ExprParser.T__2);
					this.state = 184;
					this.expr();
					}
					}
					this.state = 187;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				} while (_la===3);
				this.state = 189;
				this.match(Lean4ExprParser.T__24);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public binders(): BindersContext {
		let localctx: BindersContext = new BindersContext(this, this._ctx, this.state);
		this.enterRule(localctx, 24, Lean4ExprParser.RULE_binders);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 194;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 193;
				this.binder();
				}
				}
				this.state = 196;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (((((_la - 24)) & ~0x1F) === 0 && ((1 << (_la - 24)) & 533) !== 0));
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public binder(): BinderContext {
		let localctx: BinderContext = new BinderContext(this, this._ctx, this.state);
		this.enterRule(localctx, 26, Lean4ExprParser.RULE_binder);
		try {
			this.state = 202;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 33:
				localctx = new SimpleBinderItemContext(this, localctx);
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 198;
				this.identifiers();
				}
				break;
			case 24:
				localctx = new ExplicitBinderItemContext(this, localctx);
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 199;
				this.explicitBinder();
				}
				break;
			case 26:
				localctx = new ImplicitBinderItemContext(this, localctx);
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 200;
				this.implicitBinder();
				}
				break;
			case 28:
				localctx = new InstanceBinderItemContext(this, localctx);
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 201;
				this.instanceBinder();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public explicitBinder(): ExplicitBinderContext {
		let localctx: ExplicitBinderContext = new ExplicitBinderContext(this, this._ctx, this.state);
		this.enterRule(localctx, 28, Lean4ExprParser.RULE_explicitBinder);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 204;
			this.match(Lean4ExprParser.T__23);
			this.state = 205;
			this.identifiers();
			this.state = 206;
			this.match(Lean4ExprParser.T__0);
			this.state = 207;
			this.expr();
			this.state = 208;
			this.match(Lean4ExprParser.T__24);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public implicitBinder(): ImplicitBinderContext {
		let localctx: ImplicitBinderContext = new ImplicitBinderContext(this, this._ctx, this.state);
		this.enterRule(localctx, 30, Lean4ExprParser.RULE_implicitBinder);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 210;
			this.match(Lean4ExprParser.T__25);
			this.state = 211;
			this.identifiers();
			this.state = 214;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===1) {
				{
				this.state = 212;
				this.match(Lean4ExprParser.T__0);
				this.state = 213;
